Agregado boton de "Registrarse" en registro.html y estilos.css

--- a/public_html/registro.html
+++ b/public_html/registro.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8" />
 <title>Ejemplo de formulario maquetado</title>
 <link href="estiloA12M3.css" rel="stylesheet">
+<link rel="stylesheet" href="css/estilos.css" type="text/css"/>
+
 <!--<link href="estiloA16M2.css" rel="stylesheet">-->
 
 </head>
@@ -117,11 +119,11 @@
     </span>
   </div>
 </li>
- 
-<li class="botones">
-  <input id="alta" type="submit" value="Registrarse" />
+
+<li class="button">
+    <button id="btn_registrar_usuario" >Registrarse</button>
 </li>
- 
+
 </ul>
 </form>
  
